heroku update for deploy

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "app.js",
-    "nodemon": "nodemon start -e js,hbs"
+    
+    "start": "node src/app.js"
+    
   },
   "author": "",
   "license": "ISC",
